# biblion-management-system

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: book_management_system_pipeline.yml  ci.yml
app/: auth.py  db.py  main.py  models.py  schemas.py
app/routers/: auth.py  biblion.py
app/services/: biblion.py
app/tests/: conftest.py  test_books.py
